# py-chat

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  setup.cfg
.github/workflows/: main.yaml
py_chat/: c2.py  client.py  main.py  server.py
