[metadata]
name = py_chat
version = 0.1.0
description = TUI socketted chat room
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ttibsi/py-chat
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    windows-curses!=2.3.1;sys_platform=="win32"
python_requires = >=3.8

[options.entry_points]
console_scripts =
    py-chat = py_chat.main:main

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
